Projection precision is zoom dependent #34706

Closed
opened 2013-03-20 00:19:14 +01:00 by Georg K · 5 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.04 x64, Radeon HD7770

- Blender version with error, and version that worked ---

Error in 2.66a and r55421

- Short description of error ---

When projecting vertices onto faces (probably with all other combinations as well), the precision of the projection is depending on how close you are zoomed in. It should always use maximum precision independently of the zoom factor.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Hit G, Y , Ctrl - mouse move in the left viewport, leave Edit mode, select the object in the right viewport, enter Edit mode and repeat G, Y, Ctrl-mouse move, then compare results: At the beginning, the circle was perfectly aligned to the cylinder, so the middle vertices (X=0.00000) of the circle were at local coordinate X = 0.00000 and those of the cylinder were at X = -0.000001 (should be zero of course, but as close as I could do). After the projection, the middle vertices of the circle end up shifted to the left: if projected from a zoomed-out viewport (left), the offset is very much noticeable and the circle is no cirle any more. When zoomed-in as close as possible (right), the offset is non-existent, like it should be.

left : before: central circle vertices at X = -0.000001 after projection -0.04409 (and became jaggy, unusable result)
right: before: central circle vertices at X = -0.000001 after projection -0.00000 (like expected)
%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.04 x64, Radeon HD7770 - Blender version with error, and version that worked --- Error in 2.66a and r55421 - Short description of error --- When projecting vertices onto faces (probably with all other combinations as well), the precision of the projection is depending on how close you are zoomed in. It should always use maximum precision independently of the zoom factor. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Hit G, Y , Ctrl - mouse move in the left viewport, leave Edit mode, select the object in the right viewport, enter Edit mode and repeat G, Y, Ctrl-mouse move, then compare results: At the beginning, the circle was perfectly aligned to the cylinder, so the middle vertices (X=0.00000) of the circle were at local coordinate X = 0.00000 and those of the cylinder were at X = -0.000001 (should be zero of course, but as close as I could do). After the projection, the middle vertices of the circle end up shifted to the left: if projected from a zoomed-out viewport (left), the offset is very much noticeable and the circle is no cirle any more. When zoomed-in as close as possible (right), the offset is non-existent, like it should be. left : before: central circle vertices at X = -0.000001 after projection -0.04409 (and became jaggy, unusable result) right: before: central circle vertices at X = -0.000001 after projection -0.00000 (like expected) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I never got the hang of it this snapping bizz in blender... nor do I see anything snapping here, or what's meant to snap even...
Unfortunately the person who added this in Blender is not active anymore, and no new maintainer has popped up.

I suggest to mark this as an orphaned code "todo" item in wiki.
Will leave it open a while for others to check who might be more successful understanding it. :)%%%

%%%I never got the hang of it this snapping bizz in blender... nor do I see anything snapping here, or what's meant to snap even... Unfortunately the person who added this in Blender is not active anymore, and no new maintainer has popped up. I suggest to mark this as an orphaned code "todo" item in wiki. Will leave it open a while for others to check who might be more successful understanding it. :)%%%
Author

%%%Sorry, I missed to add that you have to click on the mesh to confirm the snap, so the complete actions are G, Y, Ctrl - mouse move with the mouse cursor on the faces of the cylinder mesh and then click LMB to confirm.
To better explain what I want to accomplish, I attached another screenshot modeling something like a part of a modern kitchen faucet. In short, from a flat "2D" circle I am creating a curved, "3D" circle by projecting it onto the faces of the cylinder.%%%

%%%Sorry, I missed to add that you have to click on the mesh to confirm the snap, so the complete actions are G, Y, Ctrl - mouse move with the mouse cursor on the faces of the cylinder mesh and then click LMB to confirm. To better explain what I want to accomplish, I attached another screenshot modeling something like a part of a modern kitchen faucet. In short, from a flat "2D" circle I am creating a curved, "3D" circle by projecting it onto the faces of the cylinder.%%%

%%%fixed r56226.%%%

%%%fixed r56226.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34706
No description provided.