fix [#34706] Projection precision is zoom dependent ED_view3d_project_float functions were rounding the results.